# LOCA

./: README.md  main.py  pyproject.toml
configs/CPhO/LOCA-interpretation_stepwise/: config.yaml
configs/CPhO/ablation/: config_holistic_review.yaml  config_wo_augmentation.yaml  config_wo_both.yaml  config_wo_review.yaml
configs/CPhO/self-refine/: config.yaml
configs/CPhO/single-llm/: config.yaml
configs/IPhO/LOCA-interpretation_stepwise/: config.yaml
configs/IPhO/single-llm/: config.yaml
problem_set/CPhO/: test_42.jsonl
problem_set/IPhO/2025/: test.jsonl  test_1_split.jsonl  test_2_split.jsonl  test_3_split.jsonl
scripts/: auto_split_problems.py
src/: __init__.py  arbiter.py  chat.py  comparison.py  instructions.py  main.py  secretary.py  single_llm.py  utils.py
src/api/: __init__.py  base.py  interface_anthropic.py  interface_litellm.py  interface_openai.py
src/loca/: solver.py
src/loca/utils/: __init__.py  augmentation.py  explanation.py  image_explanation.py  instructions.py  reviewer.py  secretary.py
src/prompt/: arbiter_prompt.json  arbiter_semantic_voting.json
src/prompt/image_explanation/: image_explanation.json
src/prompt/secretary/: prompt_secretary.json  prompt_secretary_final.json
src/prompt/single_llm/: cot.json  prompt.json  prompt_fix_history_answer.json  prompt_zero_shot_cot.json
src/vanilla_review/: reviewer.py  solver.py
src/vanilla_review/prompt/: simple_reviewer_prompt.json  simple_reviewer_prompt_stepwise.json
test_results/CPhO/Physics_supernova/: 42-1.md  42-2.md  42-3.md  42-4.md  42-5.md  42-6.md  42-7.md
(+130 files in other folders)
